--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, itinial-scale=1">
         <title>Indecision App</title>
     </head>
 
