--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, itinial-scale=1">
         <title>Indecision App</title>
+        <link rel="icon" type="image/png" href="/images/favicon.png"> 
     </head>
 
     <body>
